# kids-words

./: .env.staging.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.staging.yml  docker-compose.yml  playwright.config.ts
.add/: add-feedback.md  away-log.md  config.json  cycle-15-direction.md  cycle-17-memo.md  docs-manifest.json  handoff.md  learnings-active.md  learnings.json  learnings.md  learnings.md.bak  observations.md  retro-scores.json
.claude/: settings.json
backend/: Dockerfile  Dockerfile.prod  alembic.ini  entrypoint.sh  pyproject.toml  test.db
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_word_builder.py
backend/app/: config.py  main.py  models.py  schemas.py  seed.py  seed_animals.py  seed_bodyparts.py  seed_foods.py  seed_shapes.py  seed_word_builder.py  star_math.py
backend/app/routes/: categories.py  profiles.py  progress.py  results.py  word_builder.py
backend/tests/: conftest.py  test_categories.py  test_health.py  test_migrations.py  test_models.py  test_profiles.py  test_progress.py  test_results.py  test_seed_idempotency.py  test_star_math.py  test_word_builder.py  test_word_builder_migration.py  test_word_builder_progress_summary.py  test_word_builder_seed.py
docs/: cvc-builder-image-shopping-list.md  cvc-builder-impact-analysis.md  prd.md  sequence-diagram.md  staging-deploy.md
frontend/: Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
specs/: auto-staging-deploy.md  beta-image-push.md  cvc-builder.md  (+15 more)
(+104 files in other folders)
